Исправлена конфигурация CI для использования стабильных версий Python

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.14]  # Используем стабильные версии Python
+        python-version: [3.8, 3.9, 3.10]  # Используем только стабильные версии Python
 
     steps:
     - name: Check out the code
