--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,11 +10,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # или используйте нужную вам платформу, например, 'windows-latest'
+    
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]  # Используем только стабильные версии Python
-
+        python-version: [3.14.0-alpha, 3.8, 3.9, 3.10]  # Указываем ваши версии Python, включая стабильные и альфа-версии
+    
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
@@ -22,13 +23,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python-version }}  # Автоматически подставляется версия из матрицы
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt  # Устанавливаем зависимости из файла requirements.txt
 
     - name: Run tests
       run: |
-        pytest
+        pytest  # Запуск тестов с использованием pytest
