--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: [3.14.0-alpha, 3.8, 3.9, 3.10]  # Указываем ваши версии Python, включая стабильные и альфа-версии
+        python-version: [3.14.0-alpha]  # Указываем ваши версии Python, включая стабильные и альфа-версии
     
     steps:
     - name: Check out the code
