--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Python CI/CD
 
 on:
   push:
@@ -9,26 +9,48 @@ on:
       - main
 
 jobs:
-  test:
+  test_and_deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]  # Замените на стабильную версию
+        python-version: [3.9]  # Замените на вашу версию Python, если нужно
 
     steps:
-    - name: Check out the code
-      uses: actions/checkout@v2
+      # Шаг 1: Клонирование репозитория
+      - name: Check out the code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      # Шаг 2: Установка Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      # Шаг 3: Установка зависимостей
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        pytest
+      # Шаг 4: Запуск тестов
+      - name: Run tests
+        run: |
+          pytest
+
+      # Шаг 5: Деплой на GitHub, если тесты прошли успешно
+      - name: Deploy changes
+        if: success()  # Эта строка проверяет, что предыдущие шаги прошли успешно
+        run: |
+          # Убедитесь, что ваш репозиторий настроен для пуша
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          
+          # Настройка удаленного репозитория с токеном для аутентификации
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          
+          # Добавление и коммит изменений
+          git add .
+          git commit -m "Deploying changes after successful tests"
+          
+          # Пуш изменений в ветку main (или в другую ветку, если требуется)
+          git push origin main
