--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]  # Замените на стабильную версию
+        python-version: [3.9]
 
     steps:
     - name: Check out the code
@@ -32,3 +32,12 @@ jobs:
     - name: Run tests
       run: |
         pytest
+
+    # - name: Push changes automatically
+    #   if: success()
+    #   run: |
+    #     git config user.name "GitHub Actions"
+    #     git config user.email "actions@github.com"
+    #     git add .
+    #     git commit -m "Automated changes after successful tests"
+    #     git push origin main
