--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,38 +1,61 @@
-name: Python CI
+name: CI/CD Pipeline
 
 on:
-  workflow_dispatch:  # Позволяет запуск вручную с выбором параметров.
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'  # Укажите вашу версию Python
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - name: Run flake8
+        run: flake8  # Проверка кода с помощью flake8
+
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-
     steps:
-    - name: Check out the code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'  # Укажите вашу версию Python
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Устанавливаем зависимости из вашего requirements.txt
+      - name: Run tests
+        run: pytest  # Запуск тестов с использованием pytest
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        pytest
-
-    - name: Push changes automatically
-      if: ${{ inputs.push_changes == 'true' }} # Выполняется только если параметр равен "true"
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add .
-        git commit -m "Automated changes after successful tests"
-        git push origin main
+  push:
+    needs: test  # push будет выполнен только если тесты прошли успешно
+    if: success()  # Выполняем только в случае успешных тестов
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check for changes
+        id: check_for_changes
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git diff --exit-code || echo "Есть изменения"  # Проверка наличия изменений
+      - name: Commit and Push Changes
+        if: ${{ steps.check_for_changes.outcome == 'failure' }}  # Выполняем пуш только если есть изменения
+        run: |
+          git add .  # Добавляем изменения
+          git commit -m "Автоматическое обновление после успешных тестов"  # Создаем коммит
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main  # Автоматический push с использованием GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Использование токена для авторизации
